force-app/main/default/objects/EOB__c/EOB__c.object-meta.xml
<CustomObject>
    <description>This object stores the Parent ERA and child ERA.
Parent ERA is an orphan record whereas Child ERA is associated to a self lookup field to Parent ERA.</description>
    <label>ERA</label>
    <nameField>
        <displayFormat>ERA-{0000}</displayFormat>
        <label>ERA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>