force-app/main/default/objects/EOB__c/fields/Action_to_be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_to_be_Taken__c</fullName>
    <label>Action to be Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment Writeoff</fullName>
                <default>true</default>
                <label>Adjustment Writeoff</label>
            </value>
            <value>
                <fullName>Transfer to Secondary</fullName>
            </value>
            <value>
                <fullName>Rebill</fullName>
            </value>
            <value>
                <fullName>Transfer to Tertiary</fullName>
            </value>
            <value>
                <fullName>Transfer to Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>