force-app/main/default/objects/EOB__c/fields/Amount_billed_by_provider__c.field-meta.xml
<CustomField>
    <fullName>Amount_billed_by_provider__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount billed by provider</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>