force-app/main/default/objects/EOB__c/fields/Amount_paid_by_payer__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid_by_payer__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>By Payer</inlineHelpText>
    <label>Amount paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>