force-app/main/default/objects/EOB__c/fields/Charge_id_A__c.field-meta.xml
<CustomField>
    <fullName>Charge_id_A__c</fullName>
    <label>Charge id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>