force-app/main/default/objects/EOB__c/fields/Check_EFT_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_EFT_Date__c</fullName>
    <label>Check/EFT Date</label>
    <type>Date</type>
</CustomField>