force-app/main/default/objects/EOB__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <label>Check Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>