force-app/main/default/objects/EOB__c/fields/Claim_Insurance_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Insurance_Id__c</fullName>
    <label>Claim Insurance number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>