force-app/main/default/objects/EOB__c/fields/CoInsurance__c.field-meta.xml
<CustomField>
    <fullName>CoInsurance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Co-Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>