force-app/main/default/objects/EOB__c/fields/CoPayment__c.field-meta.xml
<CustomField>
    <fullName>CoPayment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Co-Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>