force-app/main/default/objects/EOB__c/fields/Copy_Of_Original_ERA__c.field-meta.xml
<CustomField>
    <fullName>Copy_Of_Original_ERA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Of Original ERA?</label>
    <type>Checkbox</type>
</CustomField>