force-app/main/default/objects/EOB__c/fields/Download_Time__c.field-meta.xml
<CustomField>
    <fullName>Download_Time__c</fullName>
    <label>Download Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>