force-app/main/default/objects/EOB__c/fields/EOB__c.field-meta.xml
<CustomField>
    <fullName>EOB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERA</label>
    <referenceTo>EOB__c</referenceTo>
    <relationshipLabel>ERA</relationshipLabel>
    <relationshipName>EOB</relationshipName>
    <type>Lookup</type>
</CustomField>