force-app/main/default/objects/EOB__c/fields/EOB_Id__c.field-meta.xml
<CustomField>
    <fullName>EOB_Id__c</fullName>
    <label>ERA Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>