force-app/main/default/objects/EOB__c/fields/ERA_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>ERA_Status_Code__c</fullName>
    <label>ERA Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process as Primary</fullName>
            </value>
            <value>
                <fullName>Processed as Secondary</fullName>
            </value>
            <value>
                <fullName>Processed as Tertiary</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>19: Processed as Primary, Forwarded to Additional Payer(s)</fullName>
            </value>
            <value>
                <fullName>20: Processed as Secondary, Forwarded to Additional Payer(s)</fullName>
            </value>
            <value>
                <fullName>21: Processed as Tertiary, Forwarded to Additional Payer(s)</fullName>
            </value>
            <value>
                <fullName>22: Reversal of Previous Payment</fullName>
            </value>
            <value>
                <fullName>23: Not our Claim, Forwarded to Additional Payer(s)</fullName>
            </value>
            <value>
                <fullName>25: Predetermination Pricing Only – No Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>