force-app/main/default/objects/EOB__c/fields/Interest_Late_Filling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Interest_Late_Filling_Charges__c</fullName>
    <formula>Net_Paid_Amt__c  -  Total_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest/ Late Filling Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>