force-app/main/default/objects/EOB__c/fields/Line_Items_Reference_Key__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Reference_Key__c</fullName>
    <label>Line Items Reference Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>