force-app/main/default/objects/EOB__c/fields/Manual_ERA__c.field-meta.xml
<CustomField>
    <fullName>Manual_ERA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual ERA?</label>
    <type>Checkbox</type>
</CustomField>