force-app/main/default/objects/EOB__c/fields/Manual_ERA_Status__c.field-meta.xml
<CustomField>
    <fullName>Manual_ERA_Status__c</fullName>
    <label>Manual ERA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERA Generated</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>