force-app/main/default/objects/EOB__c/fields/Matched_Amount__c.field-meta.xml
<CustomField>
    <fullName>Matched_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Matched Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>