force-app/main/default/objects/EOB__c/fields/Net_Paid_Amt__c.field-meta.xml
<CustomField>
    <fullName>Net_Paid_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Net Paid Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>