force-app/main/default/objects/EOB__c/fields/Network_Savings__c.field-meta.xml
<CustomField>
    <fullName>Network_Savings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Network Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>