force-app/main/default/objects/EOB__c/fields/Other_Liability__c.field-meta.xml
<CustomField>
    <fullName>Other_Liability__c</fullName>
    <label>Other Liability</label>
    <length>200</length>
    <type>Text</type>
</CustomField>