force-app/main/default/objects/EOB__c/fields/Paid_A__c.field-meta.xml
<CustomField>
    <fullName>Paid_A__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>