force-app/main/default/objects/EOB__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <label>Paid Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>