force-app/main/default/objects/EOB__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>ERA (Payer)</relationshipLabel>
    <relationshipName>ERA1</relationshipName>
    <type>Lookup</type>
</CustomField>