force-app/main/default/objects/EOB__c/fields/payer_address1__c.field-meta.xml
<CustomField>
    <fullName>payer_address1__c</fullName>
    <label>payer_address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>