force-app/main/default/objects/EOB__c/fields/payer_city__c.field-meta.xml
<CustomField>
    <fullName>payer_city__c</fullName>
    <label>payer city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>