force-app/main/default/objects/EOB__c/fields/Payer_Claim__c.field-meta.xml
<CustomField>
    <fullName>Payer_Claim__c</fullName>
    <label>Payer Claim#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>