force-app/main/default/objects/EOB__c/fields/Payer_ICN__c.field-meta.xml
<CustomField>
    <fullName>Payer_ICN__c</fullName>
    <label>Payer ICN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>