force-app/main/default/objects/EOB__c/fields/Payment_Posted__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>