force-app/main/default/objects/EOB__c/fields/Payment_Trace__c.field-meta.xml
<CustomField>
    <fullName>Payment_Trace__c</fullName>
    <label>Payment Trace #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>