force-app/main/default/objects/EOB__c/fields/Pcn__c.field-meta.xml
<CustomField>
    <fullName>Pcn__c</fullName>
    <label>Pcn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>