force-app/main/default/objects/EOB__c/fields/Primary_Posted__c.field-meta.xml
<CustomField>
    <fullName>Primary_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Posted</label>
    <type>Checkbox</type>
</CustomField>