force-app/main/default/objects/EOB__c/fields/Procedure_Code_A__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code_A__c</fullName>
    <label>Procedure Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>