force-app/main/default/objects/EOB__c/fields/Provider_Npi__c.field-meta.xml
<CustomField>
    <fullName>Provider_Npi__c</fullName>
    <label>Provider Npi</label>
    <length>100</length>
    <type>Text</type>
</CustomField>