force-app/main/default/objects/EOB__c/fields/Received_Time__c.field-meta.xml
<CustomField>
    <fullName>Received_Time__c</fullName>
    <label>Received Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>