force-app/main/default/objects/EOB__c/fields/Total_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Allowed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>