force-app/main/default/objects/EOB__c/fields/Total_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>By Provider</inlineHelpText>
    <label>Total Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>