force-app/main/default/objects/EOB__c/fields/Total_Contracted_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracted_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Contracted Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>