force-app/main/default/objects/EOB__c/fields/Total_OI_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Total_OI_Responsibility__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total OI  Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>