force-app/main/default/objects/EOB__c/fields/Total_Other_Insurance_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Insurance_Responsibility__c</fullName>
    <formula>Total_Allowed__c  -  Patient_Responsibility__c  -  Total_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Insurance Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>