force-app/main/default/objects/EOB__c/fields/Total_Provider_Adjustment_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Provider_Adjustment_Amt__c</fullName>
    <formula>Total_Charge__c -  Total_Paid__c - Interest_Late_Filling_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Provider Adjustment Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>