force-app/main/default/objects/EOB__c/fields/Unmatched_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unmatched_Amount__c</fullName>
    <formula>Total_Paid__c  -  Matched_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unmatched Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>