force-app/main/default/objects/EOB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim__c</columns>
    <columns>Total_Charge__c</columns>
    <columns>Amount_paid_by_payer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EOB_Id__c</columns>
    <columns>Pcn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>